--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "simple-icons": "^3.13.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-simple-icons": "^3.10.0",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
