--- a/src/Data/Projects.json
+++ b/src/Data/Projects.json
@@ -1,7 +1,7 @@
 {
   "projects": [
     {
-      "image": "./assets/Projects/Funcraft.PNG",
+      "image": "/assets/Projects/Funcraft.PNG",
       "title": "Funcraft",
       "desc": "A task tracking gamification application aimed to increase performance and productivity"
     }
