--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "preview": "astro preview"
   },
   "devDependencies": {
-    "astro": "^0.22.20",
+    "@astrojs/svelte": "^0.1.1",
+    "astro": "^1.0.0-beta.17",
     "sass": "^1.49.7",
-    "tailwindcss": "^3.0.19"
+    "tailwindcss": "^3.0.24"
+  },
+  "dependencies": {
+    "svelte": "^3.47.0"
   }
 }
